--- a/spk/tvheadend-testing/Makefile
+++ b/spk/tvheadend-testing/Makefile
@@ -1,7 +1,7 @@
-SPK_NAME = tvheadend
-SPK_VERS = 4.2.4
-SPK_REV = 11
-SPK_ICON = src/tvheadend.png
+SPK_NAME = tvheadend-testing
+SPK_VERS = 4.3.229
+SPK_REV = 9
+SPK_ICON = src/tvheadend-testing.png
 DSM_UI_DIR = app
 BETA = 1
 
@@ -11,8 +11,8 @@ MAINTAINER = m4tt075
 DESCRIPTION = Tvheadend is a TV streaming server and recorder for Linux, FreeBSD and Android supporting DVB-S, DVB-S2, DVB-C, DVB-T, ATSC, ISDB-T, IPTV, SAT IP and HDHomeRun as input sources. Tvheadend offers HTTP, HTSP and SAT IP streaming.
 ADMIN_PORT = 9981
 RELOAD_UI = yes
-DISPLAY_NAME = Tvheadend
-CHANGELOG = "Update to Tvheadend 4.2.4 (Release), including update of libhdhomerun to 20170930"
+DISPLAY_NAME = Tvheadend-Testing
+CHANGELOG = "Update to Tvheadend 4.3.229"
 
 HOMEPAGE = https://www.lonelycoder.com/tvheadend/
 LICENSE  = GPL v3
@@ -25,15 +25,15 @@ WIZARDS_DIR      = src/wizard/
 
 INSTALL_PREFIX = /usr/local/$(SPK_NAME)
 
-POST_STRIP_TARGET = tvheadend_extra_install
+POST_STRIP_TARGET = tvheadend-testing_extra_install
 
 BUSYBOX_CONFIG = usrmng
 ENV += BUSYBOX_CONFIG="$(BUSYBOX_CONFIG)"
 
 include ../../mk/spksrc.spk.mk
 
-.PHONY: tvheadend_extra_install
-tvheadend_extra_install:
+.PHONY: tvheadend-testing_extra_install
+tvheadend-testing_extra_install:
 	install -m 755 -d $(STAGING_DIR)/app
 	install -m 644 src/app/config $(STAGING_DIR)/app/config
 	install -m 755 -d $(STAGING_DIR)/var
