--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ script:
   # Remove the ">/dev/null" part to debug!
   - docker run -it -v `pwd`:/spksrc synocommunity/spksrc /bin/bash -c "cd /spksrc && make setup && cd spk/$PKG && make $SYNOARCH >/dev/null"
   # make arch-$SYNOARCH always return exit code 0. This line is to test if SPK has been build.
-  - ls packages/${PKG}_${SYNOARCH}*.spk
+  - ls packages/*.spk
 
 deploy:
   provider: releases
