[Travis] Build all supported 6.1 testing packages for Tvheadend 4.2.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
 
 env:
   global:
-    - PKG=ffmpeg
+    - PKG=tvheadend
   matrix:
     - SYNOARCH=arch-88f6281-6.1
     - SYNOARCH=arch-alpine-6.1
